<?xml version="1.0" encoding="utf-8"?>
<!-- 自定义键盘，尚未用到 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number1"
            android:text="@string/number1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number2"
            android:text="@string/number2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number3"
            android:text="@string/number3"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/add"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number4"
            android:text="@string/number4"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number5"
            android:text="@string/number5"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number6"
            android:text="@string/number6"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/sub"
            android:text="@string/sub"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number7"
            android:text="@string/number7"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number8"
            android:text="@string/number8"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number9"
            android:text="@string/number9"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/click_to_ensure"
            android:text="@string/click_to_ensure"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/back_to_zero"
            android:text="@string/BackToZero"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/number0"
            android:text="@string/number0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/point"
            android:text="@string/point"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/pink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:text="     (๑°⌓°๑)"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>