<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/txv_title"
        android:text="@string/choose_avatar"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/txv_album"
        android:text="@string/album"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_title"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txv_camera"
        android:text="@string/camera"
        android:textColor="@color/purple"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txv_album"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>