<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_login">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/purple"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:src="@drawable/logo_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"/>

        <ImageView
            android:src="@drawable/line_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <TextView
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/triangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_login_name"
            android:hint="@string/edit_name"
            android:textCursorDrawable="@color/purple"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:met_baseColor="@color/purple"
            app:met_errorColor="@color/pink"
            app:met_primaryColor="@color/purple"
            app:met_iconLeft="@drawable/ic_name"
            app:met_iconPadding="0dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_login_password"
            android:hint="@string/edit_password"
            android:textCursorDrawable="@color/purple"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_login_name"
            app:met_baseColor="@color/purple"
            app:met_errorColor="@color/pink"
            app:met_primaryColor="@color/purple"
            app:met_iconLeft="@drawable/ic_password"
            app:met_iconPadding="0dp"/>

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@color/purple"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_login_password"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/txv_go_to_register"
            android:text="@string/go_to_register"
            android:textColor="@color/pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="16dp"
            android:layout_alignEnd="@id/btn_login"
            android:layout_alignRight="@id/btn_login"/>

    </RelativeLayout>

</LinearLayout>